<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="TcoInsightStatus_v_5_x_x" Id="{8761db8b-fe9a-0747-2397-36ef6a1e1714}">
    <Declaration><![CDATA[TYPE TcoInsightStatus_v_5_x_x :
STRUCT
	ActionDescription : STRING(100);	
	SignalStatus : TcoInsightSignalStates_v_5_x_x;
	CurrentJobName : STRING(100);	
	CurrentJobNumber : INT := -1;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>