<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="TcoVisionParams" Id="{2bc55138-71a7-03a4-0cd2-e073f67c4c84}" ParameterList="True">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
    MAX_BYTE_ARRAY : UINT := 255;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>